# rust-chat-front-end

./: Cargo.toml  index.html
src/: main.rs
