[package]
name = "rust-chat-front-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.5.7", features = ["csr"] }
